# LEX

./: .env.example  .gitignore  ENGINEERING_REPORT.md  LICENSE  PRODUCTION_NOTES.md  README.md  SPEC.md  docker-compose.cuda.yml  docker-compose.yml  pyproject.toml  ty.toml
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml
.lex/: bm25_idf_en.json
docs/: answer_flow.mmd
profiles/: gemma4-31b-gpu.yaml  gemma4-e2b-cpu.yaml  gemma4-e2b-gpu.yaml  gemma4-e4b-gpu.yaml  gemma4-e4b-mlx.yaml  qwen35-9b-gpu.yaml  remote-openai.yaml
scripts/: env.sh
src/lex/: __init__.py  api.py  cli.py  commands.py  config.py  engine.py  generation.py  ingestion.py  model_server.py  profile.py  retrieval.py  sources.py  tracing.py  ui.py  worker.py
tests/: conftest.py  gold_standard.json  test_lex.py
tests/reports/: eval-20260419-150305.csv  eval-20260419-150305.md  eval-20260419-154453.csv  eval-20260419-154453.md  eval-20260420-181828.csv  eval-20260420-181828.md
