[project]
name = "lex"
version = "0.1.0"
description = "Natural-language Q&A over EU directives, grounded in Formex XML."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # --- Typed config & data -------------------------------------------------
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # --- HTTP ----------------------------------------------------------------
    "httpx>=0.27",
    # --- XML parsing ---------------------------------------------------------
    "lxml>=5.3",
    # --- ML: embeddings + reranker -------------------------------------------
    "sentence-transformers>=3.3",
    # --- Vector store --------------------------------------------------------
    "qdrant-client>=1.12",
    # --- Job queue + cache ---------------------------------------------------
    "redis>=5.2",
    # --- API + UI + CLI ------------------------------------------------------
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "chainlit>=1.3",
    "typer>=0.13",
    # --- Logging / tracing ---------------------------------------------------
    "structlog>=24.4",
    "langfuse>=2.53",
    # --- Profile loading -----------------------------------------------------
    "pyyaml>=6.0",
    # --- Eval ----------------------------------------------------------------
    "deepeval>=2.0",
    "rank-bm25>=0.2.2",
    "plotly>=6.7.0",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
# Pick ONE LLM backend matching your platform.
#   macOS Apple Silicon:   uv sync --extra llm-mlx
#   Linux + NVIDIA GPU:    uv sync --extra llm-llamacpp
#   Linux CPU-only:        uv sync --extra llm-llamacpp-cpu
#   Remote API only:       no extra needed

llm-mlx = [
    "mlx-lm>=0.19.0",
]

llm-llamacpp = [
    "llama-cpp-python[server]>=0.3.2",
]

llm-llamacpp-cpu = [
    "llama-cpp-python[server]>=0.3.2",
]

tracing = [
    "langfuse>=2.50.0",
]

[project.scripts]
lex = "lex.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lex"]

[tool.pytest.ini_options]
markers = [
    "eval: evaluation tests that call the LLM (slow, costs tokens)",
]
testpaths = ["tests"]

[tool.ty]
# ty configuration — see https://docs.astral.sh/ty

[tool.uv.sources]
# Prebuilt CUDA wheels for llama-cpp-python (CUDA 12.x / 13.x compatible).
llama-cpp-python = [
    { index = "abetlen-cuda", extra = "llm-llamacpp" },
]

[[tool.uv.index]]
name = "abetlen-cuda"
url  = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true

[dependency-groups]
dev = []
